--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>whats up</h1>
+    <img src="warina-hussain-latest-hot-hd-photos-wallpapers-1080p-instagram-lekn.jpg" alt="">
     
 </body>
 </html>
