--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <h1>whats up</h1>
+    <h3>New Blog</h3>
+    <h5>look mama, i can write a blog</h5>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime soluta reprehenderit accusantium, ad vitae amet sit nam. Saepe deleniti consectetur voluptatibus itaque aut consequatur earum quisquam recusandae quos, harum porro optio ad? Delectus corrupti quod expedita ipsa blanditiis quae earum!</p>
     <img src="warina-hussain-latest-hot-hd-photos-wallpapers-1080p-instagram-lekn.jpg" alt="">
     
 </body>
